--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "express": "^4.16.1",
     "express-session": "^1.15.6",
     "mongoose": "^4.12.0",
+    "nodemailer": "^4.6.4",
+    "notp": "^2.0.3",
     "npm": "^6.0.0"
   }
 }
